# AntiFrida

./: README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  antifrida.cpp  logging.h  mylibc.h  native-lib.cpp
app/src/main/java/com/xxr0ss/antifrida/: MainActivity.kt
app/src/main/java/com/xxr0ss/antifrida/utils/: AntiFrida2.kt
